--- a/css/main.css
+++ b/css/main.css
@@ -466,26 +466,77 @@ body {
   transition: all 0.5s;
 }
 
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 10vh;
-  width: 100%;
-  background-color: aqua;
+.head-nav {
   position: sticky;
   top: 0;
   z-index: 2;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  height: 10vh;
+  width: 100%;
+  background-color: rgba(255, 251, 240, 0.856);
+}
+.nav div {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 1rem;
+}
+.nav div svg {
+  position: absolute;
+}
+.nav a {
+  width: auto;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.nav a img {
+  width: 70%;
+  max-width: 250px;
+}
+
+.hidden-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(255, 251, 240, 0.856);
+  gap: 1rem;
+  display: none;
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+}
+.hidden-nav p {
+  font-family: "Outfit", sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: -0.005em;
+  line-height: 1em;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+#x {
+  display: none;
 }
 
 .pag {
   height: 90vh;
   background-color: rgb(255, 251, 240);
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 3rem;
+  margin-top: 1rem;
 }
 
 .info {
@@ -523,8 +574,70 @@ body {
 }
 .img img {
   width: 80%;
+  max-width: 400px;
 }
 
+@media (min-width: 200px) {
+  .head-nav {
+    display: block;
+  }
+  .nav-pc {
+    display: none;
+  }
+}
+@media (min-width: 540px) {
+  .info h1 {
+    font-size: 4.5rem;
+  }
+  .info h2 {
+    font-size: 4.5rem;
+  }
+  .info h3 {
+    font-size: 1.5rem;
+  }
+  .img img {
+    max-width: 600px;
+  }
+  .nav a img {
+    max-width: 400px;
+  }
+}
+@media (min-width: 1000px) {
+  .pag {
+    flex-direction: row;
+    margin-top: 0;
+    padding: 3rem;
+  }
+  .info {
+    width: 50%;
+    align-items: start;
+    gap: 1rem;
+  }
+  .info h1 {
+    text-align: start;
+    font-size: 4.5rem;
+  }
+  .info h2 {
+    text-align: start;
+    font-size: 4.5rem;
+  }
+  .info h3 {
+    text-align: start;
+    font-size: 1.5rem;
+    padding: 0;
+  }
+  .info button {
+    width: 10rem;
+    height: 3rem;
+    font-size: 1rem;
+  }
+  .img {
+    width: 50%;
+  }
+  .img img {
+    max-width: 700px;
+  }
+}
 .footer-top {
   background-image: url(../img/marca/footer/Contacto\ -\ Web-06.svg);
   background-size: 100%;
