--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400&family=Outfit:wght@900&display=swap');
 @import "_vars";
 @import "_commons";
+@import "_nav";
 @import "_index";
-@import "_test";
 @import "_footer";
 
