--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ body {
   color: white;
   border-color: transparent;
   font-family: "Outfit", sans-serif;
+  cursor: pointer;
 }
 
 .ver-mas-btn-1 {
@@ -76,6 +77,7 @@ body {
   color: white;
   border-color: transparent;
   font-family: "Outfit", sans-serif;
+  cursor: pointer;
 }
 
 .ver-mas-btn-blue {
@@ -86,6 +88,7 @@ body {
   color: white;
   border-color: transparent;
   font-family: "Outfit", sans-serif;
+  cursor: pointer;
 }
 
 .ver-mas-btn-green {
@@ -96,6 +99,7 @@ body {
   color: white;
   border-color: transparent;
   font-family: "Outfit", sans-serif;
+  cursor: pointer;
 }
 
 .ver-mas-btn-skyBlue {
@@ -106,6 +110,7 @@ body {
   color: white;
   border-color: transparent;
   font-family: "Outfit", sans-serif;
+  cursor: pointer;
 }
 
 .ver-mas-btn:hover {
@@ -198,7 +203,7 @@ body {
 }
 .Color-h:hover {
   color: rgb(248, 177, 57);
-  transition: all 1s;
+  transition: all 0.5s;
 }
 
 .Color-h:not(hover) {
@@ -207,10 +212,10 @@ body {
 
 .Color-h-red:hover {
   color: rgb(195, 58, 46);
-  transition: all 1s;
+  transition: all 0.5s;
 }
 
-.Color-h:not(hover) {
+.Color-h-red:not(hover) {
   transition: all 1s;
 }
 
@@ -267,6 +272,24 @@ body {
 
 ::-webkit-scrollbar-track {
   background-color: rgb(255, 251, 240);
+}
+
+.flecha {
+  position: fixed;
+  right: 15px;
+  bottom: 10px;
+  z-index: 2;
+  cursor: pointer;
+  opacity: 0%;
+}
+
+.flecha:hover {
+  transform: translateY(-20px);
+  transition: all 1s;
+}
+
+.flecha:not(hover) {
+  transition: all 1s;
 }
 
 .head-nav {
@@ -353,12 +376,12 @@ body {
   font-family: "Outfit", sans-serif;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 500px) {
   .head-nav {
     display: none;
   }
 }
-@media (max-width: 999px) {
+@media (max-width: 499px) {
   .pc-nav {
     display: none;
   }
@@ -488,11 +511,6 @@ body {
     font-size: 1.5rem;
     padding: 0;
   }
-  .info button {
-    width: 10rem;
-    height: 3rem;
-    font-size: 1rem;
-  }
   .img {
     width: 50%;
   }
@@ -503,6 +521,27 @@ body {
     display: none;
   }
 }
+.img-centrada {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 5rem;
+}
+.img-centrada img {
+  width: 65%;
+}
+
+.img-2 {
+  opacity: 0%;
+  transition: all 1s;
+}
+
+.img-4 {
+  opacity: 0%;
+  transition: all 1s;
+}
+
 .footer-top {
   background-image: url(../img/marca/footer/Contacto\ -\ Web-06.svg);
   background-size: 100%;
@@ -626,4 +665,246 @@ body {
 }
 .no-key {
   font-family: "Montserrat", sans-serif;
+}
+
+.pag-info {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 1.5rem;
+  gap: 1rem;
+}
+
+.info-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.info-info h1 {
+  font-family: "Outfit", sans-serif;
+  font-size: 3em;
+  letter-spacing: -0.005em;
+  line-height: 1em;
+  text-align: center;
+}
+.info-info h2 {
+  font-family: "Outfit", sans-serif;
+  font-size: 2.5em;
+  letter-spacing: -0.005em;
+  line-height: 1em;
+  text-align: center;
+}
+.info-info h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.1rem;
+  font-weight: 400;
+  padding: 1rem;
+  text-align: center;
+}
+.info-info div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.info-info div a {
+  font-family: "Outfit", sans-serif;
+  font-size: 1.2rem;
+  letter-spacing: -0.005em;
+  line-height: 1em;
+  text-align: center;
+}
+.info-info section {
+  display: none;
+}
+
+.img-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.img-info img {
+  width: 80%;
+}
+
+@media (min-width: 540px) {
+  .info-info h1 {
+    font-size: 4.5rem;
+  }
+  .info-info h2 {
+    font-size: 4.5rem;
+  }
+  .info-info h3 {
+    font-size: 1.5rem;
+  }
+  .info-info div a {
+    font-size: 1.7rem;
+  }
+  .img-info img {
+    max-width: 500px;
+  }
+}
+@media (min-width: 1000px) {
+  .pag-info {
+    flex-direction: row;
+    height: 90vh;
+  }
+  .info-info-tit h1 {
+    padding-left: 5rem;
+  }
+  .info-info-tit div {
+    padding-left: 5rem;
+    align-items: start;
+  }
+  .info-info-tit button {
+    margin-left: 5rem;
+  }
+  .info-info {
+    align-items: start;
+    padding-left: 1rem;
+  }
+  .info-info h1 {
+    font-size: 5.5rem;
+    text-align: left;
+  }
+  .info-info h2 {
+    text-align: left;
+  }
+  .info-info h3 {
+    text-align: left;
+  }
+  .info-info section {
+    display: block;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    width: 100%;
+  }
+  .info-info section a {
+    margin-right: 3rem;
+    margin-top: 2rem;
+    font-family: "Outfit", sans-serif;
+    font-size: 1.7rem;
+    letter-spacing: -0.005em;
+    line-height: 1em;
+    text-align: center;
+  }
+  .img-info img {
+    max-width: 600px;
+  }
+}
+.productos-tit {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+  margin-top: 1rem;
+}
+.productos-tit header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.productos-tit header img {
+  width: 90%;
+}
+.productos-tit h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.2em;
+  font-weight: 400;
+  display: flex;
+  text-align: center;
+  margin-top: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.productos-filtros {
+  width: 100%;
+  height: auto;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-top: 5px solid black;
+  border-bottom: 5px solid black;
+  padding: 1rem;
+  background-color: white;
+  gap: 0.5rem;
+}
+.productos-filtros p {
+  font-family: "Outfit", sans-serif;
+  font-size: 2em;
+  letter-spacing: -0.005em;
+  line-height: 1em;
+}
+
+.product-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 2rem;
+  row-gap: 2rem;
+  padding: 3rem;
+}
+.product-container div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.product-container div img {
+  width: 90%;
+}
+.product-container div h2 {
+  font-family: "Outfit", sans-serif;
+  font-size: 1.2em;
+  letter-spacing: -0.005em;
+  line-height: 1em;
+  text-align: center;
+}
+
+@media (min-width: 1000px) {
+  .productos-tit {
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+  }
+  .productos-tit header img {
+    width: 45%;
+  }
+  .productos-tit h3 {
+    width: 60%;
+    font-size: 1.25rem;
+  }
+  .product-container {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .productos-filtros {
+    justify-content: space-around;
+    flex-direction: row;
+  }
+  .productos-filtros p {
+    cursor: pointer;
+  }
+  .productos-filtros p:hover {
+    color: rgb(248, 177, 57);
+    transition: all 0.5s;
+  }
+  .productos-filtros p:not(hover) {
+    transition: all 1s;
+  }
 }/*# sourceMappingURL=main.css.map */
