--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -58,6 +58,7 @@ body{
     color: white;
     border-color: transparent;
     font-family: $mainFont;
+    cursor: pointer;
 }
 
 .ver-mas-btn-1{
@@ -78,6 +79,7 @@ body{
     color: white;
     border-color: transparent;
     font-family: $mainFont;
+    cursor: pointer;
 }
 
 .ver-mas-btn-blue{
@@ -88,6 +90,7 @@ body{
     color: white;
     border-color: transparent;
     font-family: $mainFont;
+    cursor: pointer;
 }
 
 .ver-mas-btn-green{
@@ -98,6 +101,7 @@ body{
     color: white;
     border-color: transparent;
     font-family: $mainFont;
+    cursor: pointer;
 }
 
 .ver-mas-btn-skyBlue{
@@ -108,6 +112,7 @@ body{
     color: white;
     border-color: transparent;
     font-family: $mainFont;
+    cursor: pointer;
 }
 
 // Btn Animations 
@@ -214,7 +219,7 @@ body{
 
 .Color-h:hover{
     color: $mainColor;
-    transition: all 1s;
+    transition: all 0.5s;
 }
 
 .Color-h:not(hover){
@@ -223,10 +228,10 @@ body{
 
 .Color-h-red:hover{
     color: $RedColor;
-    transition: all 1s;
+    transition: all 0.5s;
 }
 
-.Color-h:not(hover){
+.Color-h-red:not(hover){
     transition: all 1s;
 }
 
@@ -287,4 +292,23 @@ body{
 
 ::-webkit-scrollbar-track {
     background-color: $backgroundColor,
+}
+
+
+.flecha{
+    position: fixed;
+    right: 15px;
+    bottom: 10px;
+    z-index: 2;
+    cursor: pointer;
+    opacity: 0%;
+}
+
+.flecha:hover{
+    transform: translateY(-20px);
+    transition: all 1s;
+}
+
+.flecha:not(hover){
+    transition: all 1s;
 }
