--- a/css/main.css
+++ b/css/main.css
@@ -460,14 +460,14 @@ body {
   max-width: 400px;
 }
 
-.img-2 {
-  display: none;
+@media (max-width: 1000px) {
+  .img-2 {
+    display: none;
+  }
+  .img-4 {
+    display: none;
+  }
 }
-
-.img-4 {
-  display: none;
-}
-
 @media (max-width: 999px) {
   .header-pc {
     display: none;
